--- a/index.html
+++ b/index.html
@@ -273,119 +273,164 @@
 
     // Data Item penuh
     const allItems = [
-      { code: "ACID001", name: "NITRIC ACID 69% 2.5 LITER" },
-      { code: "ACID002", name: "NITRIC ACID 68% 2.5 LITER" },
-      { code: "ACID003", name: "NITRIC ACID 65% 2.5 LITER" },
-      { code: "ACID004", name: "NITRIC ACID 65% 1 LITER" },
-      { code: "ACID005", name: "HYDROCHLORIC ACID 37% 2.5LITER" },
-      { code: "ACID006", name: "HYDROCHLORIC ACID CARBOY 33% 25LITER" },
-      { code: "ACID007", name: "HYDROFLUORIC ACID 49% 2.5LITER" },
-      { code: "ACID008", name: "HYDROFLUORIC ACID 48% 2.5LITER" },
-      { code: "ACID009", name: "SULFURIC ACID 98% 2.5LITER" },
-      { code: "ACID010", name: "SULFURIC ACID 95-97% 2.5LITER" },
-      { code: "ACID011", name: "ORTHO PHOSPHORIC ACID 85% 2.5LITER" },
-      { code: "ACID012", name: "SULFUROUS ACID 5-6% 2.5LITER" },
-      { code: "ACID013", name: "PERCHLORIC ACID 70-72% 2.5LITER" },
-      { code: "ACID014", name: "PERCHLORIC ACID 70% 2.5LITER" },
-      { code: "ACID015", name: "HYDROBROMIC ACID 48-50%" },
-      { code: "ACID016", name: "ACETIC ACID GLACIAL 99.8% 2.5LITER" },
-      { code: "ACID017", name: "ACETIC ACID GLACIAL CARBOY 99.8% 25 LITER" },
-      { code: "ACID018", name: "THIOGLYCOLIC ACID 1KG" },
-      { code: "ACID019", name: "MERCAPTOACETIC ACID 98%" },
-      { code: "ACID020", name: "ACETIC ANHYDRIDE" },
-      { code: "ALC001", name: "ETHANOL 99.8% 2.5LITER" },
-      { code: "ALC002", name: "ETHANOL 70% 2.5LITER" },
-      { code: "ALC003", name: "ETHANOL ABSOLUTE 2.5L" },
-      { code: "ALC004", name: "ETHYL ALCOHOL 2.8 L" },
-      { code: "ALC005", name: "GLYCEROL 2.5 L" },
-      { code: "ALC006", name: "METHANOL 2.5L" },
-      { code: "ALC007", name: "METHYL ALCOHOL ANHYDROUS 4L" },
-      { code: "ALC008", name: "AMYL ALCOHOL" },
-      { code: "ALC009", name: "1-BUTANOL" },
-      { code: "ALC010", name: "2-METHYLBUTAN-2-O1" },
-      { code: "ALC011", name: "BENZENE" },
-      { code: "ALC012", name: "DIETHYLETHER 99%" },
-      { code: "KET001", name: "ACETONE 2.5 LITER" },
-      { code: "KET002", name: "ACETONE 25 LITER" },
-      { code: "KET003", name: "FORMALDEHYDE SOLUTION MIN 37% 2.5L" },
-      { code: "IND001", name: "4-AMINO-3-HYDROXYL-1-NAPTHALINSULFONIC ACID" },
-      { code: "IND002", name: "BARIUM DIPHENYLAMINE SULFONIC INDICATOR, 0.2%" },
-      { code: "IND003", name: "FERRIC INDICATOR SOLUTION" },
-      { code: "IND004", name: "BROMOCRESOL GREEN SOLN. 0.2G/100ML" },
-      { code: "IND005", name: "4% PHENOLPHTHALEIN 4G/100ML" },
-      { code: "OXI001", name: "HYDROGEN PEROXIDE 3%" },
-      { code: "OXI002", name: "HYDROGEN PEROXIDE 30% 1 LITER" },
-      { code: "OXI003", name: "HYDROGEN PEROXIDE 30%" },
-      { code: "OXI004", name: "POTASSIUM PERMANGANATE" },
-      { code: "OXI005", name: "SODIUM HYPOCHLORITE SOLUTION 15%" },
-      { code: "STD001", name: "LEAD STANDARD, 1000PPM" },
-      { code: "STD002", name: "TIN STANDARD, 1000PPM" },
-      { code: "STD003", name: "MANGANESE STANDARD, 1000PPM" },
-      { code: "STD004", name: "CALCIUM, 1000PPM" },
-      { code: "STD005", name: "CADMIUM, 1000PPM" },
-      { code: "STD006", name: "ALUMINIUM, 1000PPM" },
-      { code: "STD007", name: "MANGANESE, 1000PPM" },
-      { code: "STD008", name: "LEAD, 1000PPM" },
-      { code: "STD009", name: "CHROMIUM, 1000PPM" },
-      { code: "STD010", name: "MERKURI, 1000PPM" },
-      { code: "STD011", name: "ARSENIC, 1000PPM" },
-      { code: "STD012", name: "SILVER, 1000PPM" },
-      { code: "STD013", name: "IRON, 1000PPM" },
-      { code: "STD014", name: "TITANIUM, 1000PPM" },
-      { code: "STD015", name: "POTASSIUM, 1000PPM" },
-      { code: "STD016", name: "ZINC, 1000PPM" },
-      { code: "STD017", name: "SILICON, 1000PPM" },
-      { code: "STD018", name: "NICKEL, 1000PPM" },
-      { code: "STD019", name: "SODIUM, 1000PPM" },
-      { code: "STD020", name: "COPPER,1000PPM" },
-      { code: "STD021", name: "PHOSPOROUS, 1000PPM" },
-      { code: "STD022", name: "SELENIUM, 1000PPM" },
-      { code: "STD023", name: "TIN, 1000PPM" },
-      { code: "STD024", name: "ZIRCONIUM, 1000PPM" },
-      { code: "STD025", name: "MAGNESIUM, 1000PPM" },
-      { code: "STD026", name: "AU,AG,CU,ZN,NI,FE 100PPM" },
-      { code: "OTH001", name: "AMMONIA SOLUTION 25% 2.5LITER" },
-      { code: "OTH002", name: "POLYETHOXY CHAIN" },
-      { code: "OTH003", name: "PYRIDINE 2.5 LITER" },
-      { code: "OTH004", name: "PETROLEUM SPIRIT 40-60" },
-      { code: "OTH005", name: "n-HEXANE 2.5 L" },
-      { code: "OTH006", name: "DICHLOROMETHANE 2.5L" },
-      { code: "OTH007", name: "ETHYLENE GLYCOL 2.5 L" },
-      { code: "OTH008", name: "3,5,5-TRIMETHYL-1-HEXANOL TECHN 85%" },
-      { code: "CLN001", name: "Baldi" },
-      { code: "CLN002", name: "Bahan Pencuci (Jenis serbuk)" },
-      { code: "CLN003", name: "Bahan Pencuci (Cecair)" },
-      { code: "CLN004", name: "Pencuci tangan Dettol" },
-      { code: "CLN005", name: "Hand Sanitizer" },
-      { code: "CLN006", name: "Tuala Good Morning" },
-      { code: "CLN007", name: "Plastic sampah" },
-      { code: "CLN008", name: "Mop" },
-      { code: "PPE001", name: "Apron plastik" },
-      { code: "PPE002", name: "Sarung tangan getah kuning" },
-      { code: "PPE003", name: "Eye wash" },
-      { code: "BRU001", name: "Berus M.G Chemical" },
-      { code: "BRU002", name: "Copper wire brush (tembaga)" },
-      { code: "BRU003", name: "Brass wire brush" },
-      { code: "BRU004", name: "Justman brush" },
-      { code: "BRU005", name: "Berus Cat (Catherine Brush)" },
-      { code: "BRU006", name: "Horse hair Brush" },
-      { code: "LAB001", name: "Spatula lab" },
-      { code: "LAB002", name: "Spatula straight edged" },
-      { code: "LAB003", name: "Sample Boat" },
-      { code: "LAB004", name: "Bulat Clay" },
-      { code: "LAB005", name: "Fisher brand Beaker tongs safety" },
-      { code: "LAB006", name: "Bulb Pipette 30ml" },
-      { code: "STK001", name: "Stiker Putih Pendaftaran Sampel MBA" },
-      { code: "STK002", name: "Stiker Riben" },
-      { code: "STK003", name: "Stiker Bulat" },
-      { code: "OTH009", name: "Mini Drawer" },
-      { code: "OTH010", name: "Tayar Troli" },
-      { code: "OTH011", name: "Pemetik api" },
-      { code: "OTH012", name: "Eubiq plug Extention" },
-      { code: "OTH013", name: "Molykote" },
-      { code: "OTH014", name: "Container" },
-      { code: "OTH015", name: "Pembalut Plastik" }
-    ];
+    { code: "ACID001", name: "NITRIC ACID 69% 2.5 LITER" },
+    { code: "ACID002", name: "NITRIC ACID 68% 2.5 LITER" },
+    { code: "ACID003", name: "NITRIC ACID 65% 2.5 LITER" },
+    { code: "ACID004", name: "NITRIC ACID 65% 1 LITER" },
+    { code: "ACID005", name: "HYDROCHLORIC ACID 37% 2.5LITER" },
+    { code: "ACID006", name: "HYDROCHLORIC ACID CARBOY 33% 25LITER" },
+    { code: "ACID007", name: "HYDROFLUORIC ACID 49% 2.5LITER" },
+    { code: "ACID008", name: "HYDROFLUORIC ACID 48% 2.5LITER" },
+    { code: "ACID009", name: "SULFURIC ACID 98% 2.5LITER" },
+    { code: "ACID010", name: "SULFURIC ACID 95-97% 2.5LITER" },
+    { code: "ACID011", name: "ORTHO PHOSPHORIC ACID 85% 2.5LITER" },
+    { code: "ACID012", name: "SULFUROUS ACID 5-6% 2.5LITER" },
+    { code: "ACID013", name: "PERCHLORIC ACID 70-72% 2.5LITER" },
+    { code: "ACID014", name: "PERCHLORIC ACID 70% 2.5LITER" },
+    { code: "ACID015", name: "HYDROBROMIC ACID 48-50%" },
+    { code: "ACID016", name: "ACETIC ACID GLACIAL 99.8% 2.5LITER" },
+    { code: "ACID017", name: "ACETIC ACID GLACIAL CARBOY 99.8% 25 LITER" },
+    { code: "ACID018", name: "THIOGLYCOLIC ACID 1KG" },
+    { code: "ACID019", name: "MERCAPTOACETIC ACID 98%" },
+    { code: "ACID020", name: "ACETIC ANHYDRIDE" },
+    { code: "ALC001", name: "ETHANOL 99.8% 2.5LITER" },
+    { code: "ALC002", name: "ETHANOL 70% 2.5LITER" },
+    { code: "ALC003", name: "ETHANOL ABSOLUTE 2.5L" },
+    { code: "ALC004", name: "ETHYL ALCOHOL 2.8 L" },
+    { code: "ALC005", name: "GLYCEROL 2.5 L" },
+    { code: "ALC006", name: "METHANOL 2.5L" },
+    { code: "ALC007", name: "METHYL ALCOHOL ANHYDROUS 4L" },
+    { code: "ALC008", name: "AMYL ALCOHOL" },
+    { code: "ALC009", name: "1-BUTANOL" },
+    { code: "ALC010", name: "2-METHYLBUTAN-2-O1" },
+    { code: "ALC011", name: "BENZENE" },
+    { code: "ALC012", name: "DIETHYLETHER 99%" },
+    { code: "KET001", name: "ACETONE 2.5 LITER" },
+    { code: "KET002", name: "ACETONE 25 LITER" },
+    { code: "KET003", name: "FORMALDEHYDE SOLUTION MIN 37% 2.5L" },
+    { code: "IND001", name: "4-AMINO-3-HYDROXYL-1-NAPTHALINSULFONIC ACID" },
+    { code: "IND002", name: "BARIUM DIPHENYLAMINE SULFONIC INDICATOR, 0.2%" },
+    { code: "IND003", name: "FERRIC INDICATOR SOLUTION" },
+    { code: "IND004", name: "BROMOCRESOL GREEN SOLN. 0.2G/100ML" },
+    { code: "IND005", name: "4% PHENOLPHTHALEIN 4G/100ML" },
+    { code: "OXI001", name: "HYDROGEN PEROXIDE 3%" },
+    { code: "OXI002", name: "HYDROGEN PEROXIDE 30% 1 LITER" },
+    { code: "OXI003", name: "HYDROGEN PEROXIDE 30%" },
+    { code: "OXI004", name: "POTASSIUM PERMANGANATE" },
+    { code: "OXI005", name: "SODIUM HYPOCHLORITE SOLUTION 15%" },
+    { code: "STD001", name: "LEAD STANDARD, 1000PPM" },
+    { code: "STD002", name: "TIN STANDARD, 1000PPM" },
+    { code: "STD003", name: "MANGANESE STANDARD, 1000PPM" },
+    { code: "STD004", name: "CALCIUM, 1000PPM" },
+    { code: "STD005", name: "CADMIUM, 1000PPM" },
+    { code: "STD006", name: "ALUMINIUM, 1000PPM" },
+    { code: "STD007", name: "MANGANESE, 1000PPM" },
+    { code: "STD008", name: "LEAD, 1000PPM" },
+    { code: "STD009", name: "CHROMIUM, 1000PPM" },
+    { code: "STD010", name: "MERKURI, 1000PPM" },
+    { code: "STD011", name: "ARSENIC, 1000PPM" },
+    { code: "STD012", name: "SILVER, 1000PPM" },
+    { code: "STD013", name: "IRON, 1000PPM" },
+    { code: "STD014", name: "TITANIUM, 1000PPM" },
+    { code: "STD015", name: "POTASSIUM, 1000PPM" },
+    { code: "STD016", name: "ZINC, 1000PPM" },
+    { code: "STD017", name: "SILICON, 1000PPM" },
+    { code: "STD018", name: "NICKEL, 1000PPM" },
+    { code: "STD019", name: "SODIUM, 1000PPM" },
+    { code: "STD020", name: "COPPER,1000PPM" },
+    { code: "STD021", name: "PHOSPOROUS, 1000PPM" },
+    { code: "STD022", name: "SELENIUM, 1000PPM" },
+    { code: "STD023", name: "TIN, 1000PPM" },
+    { code: "STD024", name: "ZIRCONIUM, 1000PPM" },
+    { code: "STD025", name: "MAGNESIUM, 1000PPM" },
+    { code: "STD026", name: "AU,AG,CU,ZN,NI,FE 100PPM" },
+    { code: "OTH001", name: "AMMONIA SOLUTION 25% 2.5LITER" },
+    { code: "OTH002", name: "POLYETHOXY CHAIN" },
+    { code: "OTH003", name: "PYRIDINE 2.5 LITER" },
+    { code: "OTH004", name: "PETROLEUM SPIRIT 40-60" },
+    { code: "OTH005", name: "n-HEXANE 2.5 L" },
+    { code: "OTH006", name: "DICHLOROMETHANE 2.5L" },
+    { code: "OTH007", name: "ETHYLENE GLYCOL 2.5 L" },
+    { code: "OTH008", name: "3,5,5-TRIMETHYL-1-HEXANOL TECHN 85%" },
+    { code: "CLN001", name: "Baldi" },
+    { code: "CLN002", name: "Bahan Pencuci (Jenis serbuk)" },
+    { code: "CLN003", name: "Bahan Pencuci (Cecair)" },
+    { code: "CLN004", name: "Pencuci tangan Dettol" },
+    { code: "CLN005", name: "Hand Sanitizer" },
+    { code: "CLN006", name: "Tuala Good Morning" },
+    { code: "CLN007", name: "Plastic sampah" },
+    { code: "CLN008", name: "Mop" },
+    { code: "PPE001", name: "Apron plastik" },
+    { code: "PPE002", name: "Sarung tangan getah kuning" },
+    { code: "PPE003", name: "Eye wash" },
+    { code: "BRU001", name: "Berus M.G Chemical" },
+    { code: "BRU002", name: "Copper wire brush (tembaga)" },
+    { code: "BRU003", name: "Brass wire brush" },
+    { code: "BRU004", name: "Justman brush" },
+    { code: "BRU005", name: "Berus Cat (Catherine Brush)" },
+    { code: "BRU006", name: "Horse hair Brush" },
+    { code: "LAB001", name: "Spatula lab" },
+    { code: "LAB002", name: "Spatula straight edged" },
+    { code: "LAB003", name: "Sample Boat" },
+    { code: "LAB004", name: "Bulat Clay" },
+    { code: "LAB005", name: "Fisher brand Beaker tongs safety" },
+    { code: "LAB006", name: "Bulb Pipette 30ml" },
+    { code: "STK001", name: "Stiker Putih Pendaftaran Sampel MBA" },
+    { code: "STK002", name: "Stiker Riben" },
+    { code: "STK003", name: "Stiker Bulat" },
+    { code: "OTH009", name: "Mini Drawer" },
+    { code: "OTH010", name: "Tayar Troli" },
+    { code: "OTH011", name: "Pemetik api" },
+    { code: "OTH012", name: "Eubiq plug Extention" },
+    { code: "OTH013", name: "Molykote" },
+    { code: "OTH014", name: "Container" },
+    { code: "OTH015", name: "Pembalut Plastik" },
+    { code: "PLS001", name: "Plastik (Tanpa Zip) 14 x 20" },
+    { code: "PLS002", name: "Plastik (Tanpa Zip) 3 x 5" },
+    { code: "PLS003", name: "Plastik (Tanpa Zip) 12 x 18" },
+    { code: "PLS004", name: "Plastik (Tanpa Zip) 9 x 14" },
+    { code: "PLS005", name: "Plastik Roll 12 x 18" },
+    { code: "FIL001", name: "Filter paper" },
+    { code: "EQ009", name: "DispensetteS MBA" },
+    { code: "EQ010", name: "Aksesori mikromeister" },
+    { code: "EQ011", name: "Petri Dish" },
+    { code: "GLS001", name: "Watch Glass" },
+    { code: "BEK001", name: "Beaker plastic 100ml" },
+    { code: "BEK002", name: "Beaker 100 ml" },
+    { code: "BEK003", name: "Beaker kaca 600ml" },
+    { code: "BEK004", name: "Beaker kaca 150 ml" },
+    { code: "BEK005", name: "Beaker kaca 800 ml" },
+    { code: "BEK006", name: "Narrow Neck 500ml" },
+    { code: "BEK007", name: "Beaker conical 250ml" },
+    { code: "BEK008", name: "Beaker Narrow 600ml" },
+    { code: "BEK009", name: "Pyrex beaker 1000A-150 griffin low form" },
+    { code: "EQ012", name: "Mikromeister" },
+    { code: "EQ013", name: "Jar Vacuum Pump" },
+    { code: "FLK001", name: "Kelalang Dasar Bulat 1L" },
+    { code: "BEK010", name: "Schott Duran beaker 500ml" },
+    { code: "BOT001", name: "Wash Bottle 250ml" },
+    { code: "BOT002", name: "Bottle Lutsinar (En. Bala)" },
+    { code: "BOT003", name: "Bottle" },
+    { code: "BOT004", name: "Bottle Putih" },
+    { code: "TUB001", name: "Centrifuge tube 50ml orange cap" },
+    { code: "CLN009", name: "Multi surface sanitizer disinfectant (Magic 10)" },
+    { code: "CLN010", name: "Decon 90" },
+    { code: "TIP001", name: "Pipet Tip 5 ml" },
+    { code: "TUB002", name: "Sample Tube ICPMS 15ml" },
+    { code: "TUB003", name: "Sample Tube ICPMS 50 ml" },
+    { code: "EQ014", name: "Troli" },
+    { code: "PPE009", name: "Glove" },
+    { code: "PPE010", name: "Face Mask 8210" },
+    { code: "PPE011", name: "Face Mask 8511" },
+    { code: "PPE012", name: "Glove hitam panjang" },
+    { code: "PPE013", name: "Glove getah hijau" },
+    { code: "PPE014", name: "Fire Blanket" },
+    { code: "PPE015", name: "Apron single" },
+    { code: "PPE016", name: "Hazard mask" },
+    { code: "PPE017", name: "Safety Goggles" },
+    { code: "PPE018", name: "Emergency stretcher" },
+    { code: "EQ015", name: "Iron Steam" }
+];
 
     // Hubungan antara dropdown dan carian
     const codeSelect = document.getElementById('kod-item-select');
@@ -539,5 +584,6 @@
   </script>
 </body>
 </html>
+
 
 
