--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stor Makmal JMG BPT</title>
+  <title>BILIK PENYIMPANAN BARANG MAKMAL</title>
 
   <!-- Bulma CSS Framework -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
@@ -84,7 +84,7 @@
   <section class="hero is-primary is-bold">
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title">Stor Makmal JMG BPT</h1>
+        <h1 class="title">BILIK PENYIMPANAN BARANG MAKMAL</h1>
       </div>
     </div>
   </section>
@@ -608,3 +608,4 @@
   </script>
 </body>
 </html>
+
